First pass, it works

--- a/client/styles/base.less
+++ b/client/styles/base.less
@@ -7,6 +7,9 @@
 @import 'vendor/pickadate/classic-date';
 @import 'vendor/pickadate/classic-time';
 
+// Dataviz
+@import 'node_modules/keen-dataviz/lib/styles/index';
+
 // Scope all styles under '#keen-explorer' to reduce conflicts.
 #keen-explorer {
 
